# MazingLabyrinthRun

./: .gitignore  Makefile  README.md  make.bat
MazingLabyrinthRun/: .clang-format  CMakeLists.txt  cmake_generate_and_build.bat  cmake_no_build.bat  cmake_only_build.bat
MazingLabyrinthRun/code/include/: game.h  main.h  mazingLabyrinthRun.h  mazing_labyrinth_run.h  tile.h
MazingLabyrinthRun/code/include/animation/: animation.h  animationPlayer.h  animation_player.h  default_animations.h  iAnimationFactory.h
MazingLabyrinthRun/code/include/attribute/: action_type.h  elevation_level.h  facingSide.h  facing_side.h  hitbox.h  impulse.h
MazingLabyrinthRun/code/include/component/: component.h  componentHandle.h  componentManager.h  componentMask.h
MazingLabyrinthRun/code/include/component_base/: component.h  component_handle.h  component_manager.h  component_mask.h  components.h
MazingLabyrinthRun/code/include/components/: action_type_component.h  ai_component.h  animation_player_component.h  collision_component.h  component.h  component_array.h  component_handle.h  component_manager.h  component_mask.h  composite_event_component.h  elevation_component.h  facing_side_component.h  move_component.h  move_components.h  move_event_component.h  player_component.h  skin_component.h  solid_component.h  speed_component.h  sprite_component.h  status_list_component.h  transform_component.h  update_solid_event_component.h
MazingLabyrinthRun/code/include/components/composite_components/: render_object_component.h
MazingLabyrinthRun/code/include/components/data_components/: action_type_component.h  ai_component.h  animation_player_component.h  boundary_component.h  elevation_component.h  facing_side_component.h  health_points_component.h  impulse_component.h  impulse_response_component.h  intersects_with_component.h  mouse_component.h  player_component.h  skin_component.h  solid_component.h  speed_component.h  sprite_component.h  (+3 more)
MazingLabyrinthRun/code/include/entity/: component.h  entity.h  entityHandle.h  entityManager.h  entityMap.h  entity_manager.h
MazingLabyrinthRun/code/include/entityBase/: activeObject.h  iLogic.h  iView.h  movable.h  worldObject.h
MazingLabyrinthRun/code/include/entity_base/: entities.h  entity.h  entity_handle.h  entity_manager.h  entity_map.h
MazingLabyrinthRun/code/include/entity_creation/: attach_components.h  entity_list.h  set_start_values.h
MazingLabyrinthRun/code/include/event/: event.h  event_bus.h  event_handler.h  member_function_handler.h
MazingLabyrinthRun/code/include/factory/: entity_factory.h  entity_list.h
MazingLabyrinthRun/code/include/player/: action.h  execute_actions.h  player.h  playerLogic.h  playerState.h  playerTextureEnum.h  playerTextureHolder.h  playerView.h  player_actions.h  player_state.h
MazingLabyrinthRun/code/include/resource/: animation.h  animationPlayer.h  iAnimationFactory.h  resourceManager.h  resource_manager.h  skins.h  textureEnum.h  textureHolder.h  textureManager.h  texture_enum.h
MazingLabyrinthRun/code/include/system/: system.h  system_sequence_wrapper.h  system_utils.h  systems.h
MazingLabyrinthRun/code/include/systems/: move_system.h  system.h  system_manager.h
MazingLabyrinthRun/code/include/tile/: grass.h  iTile.h  path.h  rock.h  tileEnum.h  tileFactory.h  tileMap.h  tree.h  wall.h
MazingLabyrinthRun/code/include/time/: time_manager.h
MazingLabyrinthRun/code/include/ui/: ability_list.h  health_bar.h  ui_manager.h
MazingLabyrinthRun/code/include/utils/: collision_utils.h  component_utils.h  sfml_rect_helpers.h  sfml_vector_helpers.h  vector_utils.h
MazingLabyrinthRun/code/include/window/: gameWindow.h  game_window.h
MazingLabyrinthRun/code/include/world/: IInteracatableObject.h  ILivingObject.h  coordinator.h  iMovingObject.h  iWorldObject.h  mobFactory.h  movingObject.h  quad_tree.h  spriteHolder.h  world.h  worldObjectHolder.h
MazingLabyrinthRun/code/src/: game.cpp  main.cpp  mazingLabyrinthRun.cpp  mazing_labyrinth_run.cpp  tile.cpp
MazingLabyrinthRun/code/src/animation/: animation.cpp  animationPlayer.cpp  animation_player.cpp
MazingLabyrinthRun/code/src/component/: component.cpp  componentMask.cpp  component_mask.cpp  components.cpp
MazingLabyrinthRun/code/src/entity/: entities.cpp  entityManager.cpp  entity_manager.cpp
MazingLabyrinthRun/code/src/entity_creation/: attach_components.cpp  set_start_values.cpp
MazingLabyrinthRun/code/src/factory/: entity_factory.cpp
MazingLabyrinthRun/code/src/player/: player.cpp  playerLogic.cpp  playerTextureHolder.cpp  playerView.cpp
MazingLabyrinthRun/code/src/resource/: animation.cpp  animationPlayer.cpp  resourcesManager.cpp  resources_manager.cpp  textureHolder.cpp  textureManager.cpp
MazingLabyrinthRun/code/src/system/: system.cpp  systems.cpp
MazingLabyrinthRun/code/src/tile/: path.cpp  tileFactory.cpp  wall.cpp
MazingLabyrinthRun/code/src/window/: gameWindow.cpp  game_window.cpp  ui_manager.cpp
MazingLabyrinthRun/code/src/world/: quad_tree.cpp  spriteHolder.cpp  world.cpp  worldObjectHolder.cpp
MazingLabyrinthRun/code/test/: CMakeLists.txt  test.cpp
MazingLabyrinthRun/code_generation/: generate.py
MazingLabyrinthRun/code_generation/generators/Component/: components_generator.py
MazingLabyrinthRun/code_generation/json_representations/: components.json  events.json  systems.json
MazingLabyrinthRun/code_generation/pre_process/: classes.py  fetch_data.py  validation.py
MazingLabyrinthRun/code_generation/utils/json/: json_utils
MazingLabyrinthRun/code_generation/write/: write_components.py  write_events.py  write_members.py  write_systems.py  write_utils.py
MazingLabyrinthRun/codegeneration/: classes.py  component_class.py  components.json  fetch_components.py  fetch_data.py  generate.py  systems.json  systems.txt  validation.py  write_components - Copy.py  write_components.py  write_members.py  write_systems.py  write_utils.py
MazingLabyrinthRun/dependencies/: CMakeLists.txt
MazingLabyrinthRun/dependencies/catch2/: CMakeLists.txt
MazingLabyrinthRun/dependencies/magic_enum/: CMakeLists.txt
(+304 files in other folders)
